Fix for cmd character in html

--- a/TwoFHey/wwwonboarding/onboarding.html
+++ b/TwoFHey/wwwonboarding/onboarding.html
@@ -240,12 +240,12 @@
                             </div>
                         </div>
                         <div class="font-medium my-auto ml-3 text-sm opacity-75">
-                            ⌘ + Shift + E
+                            &#8984; + Shift + E
                         </div>
                     </div>
                     <div class="mt-3 w-full z-0 text-sm font-thin leading-5">
                         Sometimes iMessage likes to sleep on the job. If 2FHey ever misses a message, use <span
-                            class="font-medium text-xs p-1">⌘ + Shift + E</span>
+                            class="font-medium text-xs p-1">&#8984; + Shift + E</span>
                         to sync recent messages and copy the latest code to your clipboard.
                     </div>
                 </div>
