added new copy to onboarding

--- a/TwoFHey/wwwonboarding/onboarding.html
+++ b/TwoFHey/wwwonboarding/onboarding.html
@@ -165,10 +165,14 @@
                     <img draggable="false" style="height: 150px" class="w-auto" src="./assets/onboarding/logo.png">
                 </div>
                 <h1 class="mb-2 text-2xl font-bold">
-                    We need your permission
+                    2FHey needs full disk permissions<br>
                 </h1>
                 <p class="mb-2 text-sm font-thin">
-                    2FHey will work smoothly if you<br>allow us these permissions:
+                Promise, there's no other way to do this.
+                
+                </p>
+                <p class="mb-2 text-sm font-thin">
+                I know, I know. It's an invasive soounding permission.<br>2FHey is open source so feel free to check the code.
                 </p>
                 <div :class="`my-6 text-sm font-thin flex justify-start ${!hasFullDiskAccessPermission ? 'cursor-pointer hover:opacity-50 opacity-100' : 'opacity-50'}`"
                     @click="setPermissions">
