Fix typo in onboarding screen

--- a/TwoFHey/wwwonboarding/onboarding.html
+++ b/TwoFHey/wwwonboarding/onboarding.html
@@ -172,7 +172,7 @@
                 
                 </p>
                 <p class="mb-2 text-sm font-thin">
-                I know, I know. It's an invasive soounding permission.<br>2FHey is open source so feel free to check the code.
+                I know, I know. It's an invasive sounding permission.<br>2FHey is open source so feel free to check the code.
                 </p>
                 <div :class="`my-6 text-sm font-thin flex justify-start ${!hasFullDiskAccessPermission ? 'cursor-pointer hover:opacity-50 opacity-100' : 'opacity-50'}`"
                     @click="setPermissions">
