--- a/TwoFHey/wwwonboarding/onboarding.html
+++ b/TwoFHey/wwwonboarding/onboarding.html
@@ -181,13 +181,21 @@
                     </div>
                     <div class="my-auto">Full Disk Access <span v-if="!hasFullDiskAccessPermission">&rarr;</span></div>
                 </div>
-
-                <div v-if="!hasFullDiskAccessPermission" class="flex button text-white text-sm my-4 opacity-25"
+                <div :class="`my-6 text-sm font-thin flex justify-start ${!hasAccessibilityPermission ? 'cursor-pointer hover:opacity-50 opacity-100' : 'opacity-50'}`"
+                    @click="setAccessibilityPermissions">
+                    <div
+                        :class="!hasAccessibilityPermission ? 'rounded my-auto mr-2 w-3 h-3 border border-red-500 bg-red-500 opacity-25' : 'rounded my-auto mr-2 w-3 h-3 bg-green-500 border border-green-500'">
+                    </div>
+                    <div class="my-auto">Accessibility <span v-if="!hasAccessibilityPermission">&rarr;</span></div>
+                </div>
+    
+                <div v-if="!hasFullDiskAccessPermission || !hasAccessibilityPermission" class="flex button text-white text-sm my-4 opacity-25"
                     style="width: 150px" id="permissions-button">
                     <div class="m-auto truncate w-auto">
                         Continue
                     </div>
                 </div>
+        
                 <div v-else @click="nextStep"
                     class="hover:opacity-75 flex button text-white text-sm cursor-pointer my-4" style="width: 150px"
                     id="permissions-button">
@@ -271,6 +279,7 @@
                 step: 0,
                 hasNotificationPermission: false,
                 hasFullDiskAccessPermission: false,
+                hasAccessibilityPermission: false,
                 waiting: false,
 
                 showLoader: false,
@@ -293,6 +302,21 @@
                         window.webkit.messageHandlers.twoFHeyMessageHandler.postMessage("open-full-disk-access");
                         setTimeout(() => {
                             this.hasFullDiskAccessPermission = true;
+                            this.waiting = false;
+                            this.showLoader = false;
+                        }, 4000)
+                    }
+                },
+                setAccessibilityPermissions() {
+                    if (this.waiting) return;
+
+                    if (!this.hasAccessibilityPermission) {
+                        this.loaderText = "Opening System Preferences..."
+                        this.waiting = true;
+                        this.showLoader = true;
+                        window.webkit.messageHandlers.twoFHeyMessageHandler.postMessage("open-accessibility");
+                        setTimeout(() => {
+                            this.hasAccessibilityPermission = true;
                             this.waiting = false;
                             this.showLoader = false;
                         }, 4000)
